# zhujian-planning-platform

./: .env.example  .gitignore  README.md  api-py.err  package-lock.json  package.json  tsconfig.base.json  web-vue.err
apps/api-py/: pyproject.toml  requirements.txt
apps/api-py/alembic/: env.py
apps/api-py/alembic/versions/: 20260703_0001_phase1_pdd_baseline.py  20260703_0002_enable_spatial_vector.py  20260703_0003_add_investment_estimates.py  20260706_0004_workbench_boundary_models.py  20260706_0005_workbench_v12_events.py  20260706_0006_project_center_v20.py  20260706_0007_project_center_v21_initialization_gates.py  20260706_0008_project_center_v22_drafts_region_rules.py  20260706_0009_project_center_v23_migration_revisions.py  20260706_0009_project_center_v23_migrations_revisions.py
apps/api-py/app/: __init__.py  main.py
apps/api-py/app/core/: config.py
apps/api-py/app/db/: models.py  session.py
apps/api-py/app/services/: artifacts.py  auth.py  capabilities.py  dashboard.py  documents.py  estimates.py  jobs.py  model_gateway.py  office_converter.py  project_center.py  quality.py  rag.py  storage.py  workbench.py
apps/api-py/app/worker/: celery_app.py  tasks.py
apps/api-py/tests/: test_dashboard.py  test_project_center.py
apps/web-vue/: index.html  package.json  tsconfig.json  vite.config.ts
apps/worker/: README.md
archive/react-express-prototype/: README.md
docs/00_project/: MVP范围说明.md  (+30 more)
samples/: phase1_demo_source.md
scripts/: phase1_acceptance.py
templates/: #U53ef#U884c#U6027#U7814#U7a76#U62a5#U544a#U6a21#U677f.md  项目建议书模板.md
(+50 files in other folders)
