[project]
name = "zhujian-api"
version = "1.5.0"
description = "PDD-compliant FastAPI service for the Zhujian planning platform."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17.0",
  "celery>=5.5.0",
  "fastapi>=0.124.0",
  "minio>=7.2.0",
  "openpyxl>=3.1.0",
  "psycopg[binary]>=3.3.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.0",
  "python-multipart>=0.0.20",
  "python-pptx>=1.0.0",
  "redis>=7.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.38.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

